cambios  index.html
mi primer commit

--- a/index.html
+++ b/index.html
@@ -2,5 +2,8 @@
   <head><title>Pagina 1</title><head>
     <body>
       <h1>hola mundo</h1>
+      
+        <p>prueba</p>
+      
     </body>
  <html>   
