--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <body>
       <h1>hola mundo</h1>
       
-        <p>prueba</p>
+        <p>prueba de commit</p>
       
     </body>
  <html>   
