--- a/Datos.html
+++ b/Datos.html
@@ -4,5 +4,7 @@
     </head>
     <body>
         <h2>Maria jose gutierrez</h2>
+        <h2>Ficha:2930207</h2>
+        <h3>1061706392</h3>
     </body>
 </html>
