--- a/Calendario.html
+++ b/Calendario.html
@@ -6,5 +6,9 @@
     <h2>Calendario</h2>
     <p>Calendario sena</p>
     <h2>Sistemas</h2>
+
+    <h2>semana</h2>
+    <p>dia</p>
+    <h2>año</h2>
   </body>
 </html>
